# django-cached-auth-middleware

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.circleci/: config.yml
django_cached_auth_middleware/: middleware.py
django_cached_auth_middleware/tests/: test_middleware.py
django_cached_auth_middleware/tests/django/: apps.py  settings.py
tests/: test_middleware.py
tests/django/: apps.py  settings.py
